--- a/public/website/css/ss-custom.css
+++ b/public/website/css/ss-custom.css
@@ -339,7 +339,8 @@ Global Transfers Area CSS
 }
 
 .gallery {
-  background-color: #f8faf4 !important;
+  padding: 40px 80px;
+  background-color: #fff !important;
 }
 .gallery h2 {
   padding-bottom: 20px;
@@ -347,8 +348,26 @@ Global Transfers Area CSS
 .gallery p {
   font-size: 18px;
 }
+.gallery .tabs {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  padding: 10px 0px;
+}
+@media (max-width: 575px) {
+  .gallery .tabs {
+    flex-direction: column;
+  }
+}
 .gallery .container .tabs .tab {
   padding: 5px 50px !important;
+  min-width: 140px;
+  border: 1px solid #208a3c;
+}
+@media (max-width: 575px) {
+  .gallery .container .tabs .tab {
+    margin: 0 !important;
+  }
 }
 .gallery .container .media-grid {
   gap: 3rem !important;
@@ -361,7 +380,7 @@ Global Transfers Area CSS
   transform: none !important;
   transition: transform 0.3s ease;
 }
-.gallery .media-grid .media-item:hover img, .gallery .media-grid .media-item:hover video {
+.gallery .media-grid .media-item:hover img {
   transform: scale(1.1);
   transition: transform 0.3s ease;
 }
@@ -411,6 +430,98 @@ Global Transfers Area CSS
 .about-page .vision-mission .box-icon-1 .title:after {
   margin: 3% 0 !important;
 }
+@media (max-width: 768px) {
+  .about-page .vision-mission .box-icon-1 .title:after {
+    left: 50%;
+    position: absolute;
+    margin-left: -15px !important;
+    margin: 1% 0 !important;
+  }
+}
 .about-page .testimony {
   margin-top: -120px !important;
+}
+
+.download .tabs {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  padding: 10px 0px;
+}
+@media (max-width: 575px) {
+  .download .tabs {
+    flex-direction: column;
+  }
+}
+.download .tab {
+  padding: 5px 50px !important;
+  border: 1px solid #208a3c;
+}
+@media (max-width: 575px) {
+  .download .tab {
+    margin: 0 !important;
+  }
+}
+.download .brochure-grid {
+  padding-top: 40px;
+  grid-template-columns: repeat(4, 1fr);
+}
+@media (min-width: 575px) and (max-width: 991px) {
+  .download .brochure-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 575px) {
+  .download .brochure-grid {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+.spacer-40 {
+  padding-top: 40px;
+}
+
+.download, .agri-dhan-vikas {
+  background-color: #fff !important;
+}
+
+.agri-dhan-vikas {
+  padding: 0px 0px 100px 0px;
+}
+
+.product-section {
+  padding: 90px 20px;
+}
+
+@media (max-width: 768px) {
+  .box-icon-1 .icon {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+  }
+  .box-icon-1 .icon .fa {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+  }
+}
+.agri-dhan-vikas .cards-grid .card .card-content h3 {
+  font-size: 18px !important;
+  line-height: 24px;
+}
+
+.service .section-title {
+  text-align: left !important;
+  margin-bottom: 0 !important;
+}
+.service .pro_description {
+  padding-top: 20px;
+  padding-bottom: 30px;
+}
+@media (min-width: 992px) {
+  .service .pro_description {
+    max-width: 70%;
+  }
 }/*# sourceMappingURL=ss-custom.css.map */
