service detail page layout update

--- a/public/website/css/custom.scss
+++ b/public/website/css/custom.scss
@@ -38,6 +38,7 @@ h3 {
   color: var(--green);
   margin-bottom: 0.5rem;
   font-weight: 500;
+
   @media (max-width: 600px) {
     font-size: 30px;
   }
@@ -865,13 +866,15 @@ h3 {
   text-align: center;
   background-color: var(--teagreen);
   padding: 2rem 1rem;
-  
+
   h2 {
     @include heading;
   }
+
   p {
     @include para;
   }
+
   .tab {
     @include tab-style;
     margin-top: 30px;
@@ -934,29 +937,124 @@ h3 {
 
 
 //---------------------------------------------------------------- SERVICE PAGE --------------------------------------------------------------------
-.service{
-  .container{
+.service {
+  .container {
     padding-top: 40px;
   }
 }
 
 
 //---------------------------------------------------------------- CONTACT PAGE --------------------------------------------------------------------
-.contact{
-  .container{
+.contact {
+  .container {
     padding-top: 40px;
-    #cd-zoom-in, #cd-zoom-out{
+
+    #cd-zoom-in,
+    #cd-zoom-out {
       display: none;
     }
-    .maps{
+
+    .maps {
       height: 450px !important;
     }
-    .contact-add{
+
+    .contact-add {
       color: var(--darkgreen);
       font-weight: 600;
     }
-    .span-2{
+
+    .span-2 {
       margin-top: 10px !important;
     }
+  }
+}
+
+
+//---------------------------------------------------------------- SERVICE DETAIL PAGE --------------------------------------------------------------------
+.agro-projects {
+  position: relative;
+  background: url('/website/images/img-03.jpg') no-repeat center center;
+  background-size: cover;
+  min-height: 100vh;
+  color: #fff;
+  padding: 5rem 2rem;
+  display: flex;
+  flex-direction: column;
+  margin-top: 50px;
+  margin-bottom: 40px;
+
+  .content-container {
+    display: flex;
+    max-width: 1300px;
+    margin: 0 auto;
+    gap: 4rem;
+    z-index: 2;
+    position: relative;
+
+    @media (max-width: 992px) {
+      flex-direction: column;
+    }
+
+    .text-left,
+    .text-right {
+      flex: 1;
+    }
+
+    .text-right {
+      text-align: left;
+    }
+
+    h3 {
+      font-family: 'Lato', sans-serif;
+      color: var(--black);
+      font-size: 25px;
+      font-weight: 600;
+      margin: 2rem 0 1rem;
+    }
+
+    p,
+    li {
+      font-family: 'Lato', sans-serif;
+      color: var(--jetgray);
+      font-size: 14px;
+    }
+
+    li {
+      line-height: 1;
+    }
+
+    .l-p {
+      margin-bottom: 0px;
+    }
+
+    ul {
+      list-style: disc;
+      margin-left: 15px;
+      margin-bottom: 15px;
+    }
+  }
+
+  .tourist-image {
+    background: url('/website/images/tourists.png') no-repeat bottom right;
+    background-size: contain;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 40%;
+    height: 60%;
+    pointer-events: none;
+    z-index: 1;
+
+    @media (max-width: 768px) {
+      display: none;
+    }
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.5), transparent 60%);
+    z-index: 0;
   }
 }
