--- a/public/website/css/custom.css
+++ b/public/website/css/custom.css
@@ -814,7 +814,8 @@ h3 {
 .contact .container {
   padding-top: 40px;
 }
-.contact .container #cd-zoom-in, .contact .container #cd-zoom-out {
+.contact .container #cd-zoom-in,
+.contact .container #cd-zoom-out {
   display: none;
 }
 .contact .container .maps {
@@ -826,4 +827,84 @@ h3 {
 }
 .contact .container .span-2 {
   margin-top: 10px !important;
+}
+
+.agro-projects {
+  position: relative;
+  background: url("/website/images/img-03.jpg") no-repeat center center;
+  background-size: cover;
+  min-height: 100vh;
+  color: #fff;
+  padding: 5rem 2rem;
+  display: flex;
+  flex-direction: column;
+  margin-top: 50px;
+  margin-bottom: 40px;
+}
+.agro-projects .content-container {
+  display: flex;
+  max-width: 1300px;
+  margin: 0 auto;
+  gap: 4rem;
+  z-index: 2;
+  position: relative;
+}
+@media (max-width: 992px) {
+  .agro-projects .content-container {
+    flex-direction: column;
+  }
+}
+.agro-projects .content-container .text-left,
+.agro-projects .content-container .text-right {
+  flex: 1;
+}
+.agro-projects .content-container .text-right {
+  text-align: left;
+}
+.agro-projects .content-container h3 {
+  font-family: "Lato", sans-serif;
+  color: var(--black);
+  font-size: 25px;
+  font-weight: 600;
+  margin: 2rem 0 1rem;
+}
+.agro-projects .content-container p,
+.agro-projects .content-container li {
+  font-family: "Lato", sans-serif;
+  color: var(--jetgray);
+  font-size: 14px;
+}
+.agro-projects .content-container li {
+  line-height: 1;
+}
+.agro-projects .content-container .l-p {
+  margin-bottom: 0px;
+}
+.agro-projects .content-container ul {
+  list-style: disc;
+  margin-left: 15px;
+  margin-bottom: 15px;
+}
+.agro-projects .tourist-image {
+  background: url("/website/images/tourists.png") no-repeat bottom right;
+  background-size: contain;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 40%;
+  height: 60%;
+  pointer-events: none;
+  z-index: 1;
+}
+@media (max-width: 768px) {
+  .agro-projects .tourist-image {
+    display: none;
+  }
+}
+.agro-projects::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.5), transparent 60%);
+  z-index: 0;
 }/*# sourceMappingURL=custom.css.map */
