--- a/public/website/css/custom.css
+++ b/public/website/css/custom.css
@@ -576,7 +576,7 @@ h3 {
   grid-auto-rows: 350px;
   gap: 1rem;
 }
-@media (max-width: 724px) {
+@media (max-width: 990px) {
   .gallery .container .media-grid {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -584,10 +584,8 @@ h3 {
 @media (max-width: 490px) {
   .gallery .container .media-grid {
     display: flex;
-    flex-direction: row;
-    overflow-x: auto;
+    flex-direction: column;
     gap: 1rem;
-    scroll-snap-type: x mandatory;
     padding-bottom: 1rem;
   }
 }
@@ -595,13 +593,6 @@ h3 {
   overflow: hidden;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease;
-}
-@media (max-width: 490px) {
-  .gallery .container .media-grid .media-item {
-    flex: 0 0 auto;
-    width: 80%;
-    scroll-snap-align: start;
-  }
 }
 .gallery .container .media-grid .media-item img,
 .gallery .container .media-grid .media-item video {
@@ -611,6 +602,12 @@ h3 {
   -o-object-fit: cover;
      object-fit: cover;
   display: block;
+}
+@media (max-width: 490px) {
+  .gallery .container .media-grid .media-item img,
+  .gallery .container .media-grid .media-item video {
+    height: auto !important;
+  }
 }
 .gallery .container .media-grid .media-item:hover {
   transform: scale(1.02);
@@ -661,16 +658,6 @@ h3 {
   border: none;
 }
 
-@media (max-width: 768px) {
-  .media-modal .modal-content {
-    max-width: 95vw;
-    max-height: 80vh;
-  }
-  .media-modal .modal-content img,
-  .media-modal .modal-content video {
-    max-height: 50vh;
-  }
-}
 .modal {
   display: none;
   position: fixed;
@@ -715,11 +702,6 @@ h3 {
   transform: scale(1.2);
 }
 
-@media (max-width: 768px) {
-  .modal .modal-content img {
-    max-height: 60vh;
-  }
-}
 .download {
   text-align: center;
   background-color: var(--teagreen);
