--- a/public/website/css/ss-custom.scss
+++ b/public/website/css/ss-custom.scss
@@ -697,3 +697,7 @@ max-width: 100%;
         }
     }
 }
+
+.footer .box-info .box-info-body {
+        border-left-color: transparent !important;
+}
