--- a/public/website/css/ss-custom.css
+++ b/public/website/css/ss-custom.css
@@ -1,8 +1,34 @@
-.df-center {
-  display: flex;
-  align-items: center;
+@media (min-width: 767px) {
+  .df-center {
+    display: flex;
+    align-items: center;
+  }
 }
-
+@media (min-width: 576px) and (max-width: 991px) {
+  #owl-testimony .owl-nav .owl-next {
+    right: 0;
+  }
+  #owl-testimony .owl-nav .owl-prev {
+    left: 0;
+  }
+}
+@media (min-width: 767px) and (max-width: 991px) {
+  .navbar-nav > li > a {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+@media (max-width: 768px) {
+  .header-1 .navbar-nav > li:last-child a {
+    padding-left: 25px;
+    padding-right: 25px !important;
+  }
+}
+@media (min-width: 767px) {
+  .navbar-toggle {
+    display: none !important;
+  }
+}
 :root {
   --main-font-family: "Roboto", sans-serif;
   --main-color: #0d8d47;
