--- a/public/website/css/ss-custom.scss
+++ b/public/website/css/ss-custom.scss
@@ -731,3 +731,7 @@ max-width: 100%;
 .footer .box-info .box-info-body {
         border-left-color: transparent !important;
 }
+
+.blog{
+    display: none !important;
+}
