--- a/public/website/css/ss-custom.scss
+++ b/public/website/css/ss-custom.scss
@@ -730,9 +730,14 @@ max-width: 100%;
 
 .footer .box-info .box-info-body {
         border-left-color: transparent !important;
+            min-height: 115px;
 }
 
 .blog{
     display: none !important;
 }
-// 
+.holiay{
+        font-size: 13px;
+    font-weight: 400;
+
+}
