--- a/public/website/css/custom.css
+++ b/public/website/css/custom.css
@@ -213,6 +213,7 @@ h3 {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 30px;
+  padding-top: 100px;
 }
 @media (max-width: 992px) {
   .agri-dhan-vikas .cards-grid {
