--- a/public/website/css/ss-custom.scss
+++ b/public/website/css/ss-custom.scss
@@ -793,3 +793,11 @@ Global Transfers Area CSS
         display: none;
     }
 }
+.vidimg img{
+        height: 500px;
+    object-fit: cover;
+}
+
+.service-details strong{
+    font-size: 17px;
+}
