--- a/public/website/css/custom.scss
+++ b/public/website/css/custom.scss
@@ -313,6 +313,7 @@ h3 {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 30px;
+    padding-top: 100px;
 
     @media (max-width: 992px) {
       grid-template-columns: repeat(2, 1fr);
@@ -676,6 +677,7 @@ h3 {
 .gallery {
   background-color: var(--teagreen);
   padding: 0 !important;
+
   .container {
     text-align: center;
     max-width: 1300px;
@@ -691,10 +693,11 @@ h3 {
       @include para;
     }
 
-    .tabs{
+    .tabs {
       @media (max-width: 574px) {
         display: inline;
       }
+
       .tab {
         @include tab-style;
       }
