--- a/public/website/css/ss-custom.scss
+++ b/public/website/css/ss-custom.scss
@@ -662,6 +662,7 @@ Global Transfers Area CSS
     .pro_description {
         padding-top: 20px;
         padding-bottom: 30px;
+            margin-bottom: -80px;
 
         @media(min-width: 992px) {
             max-width: 70%;
