--- a/public/website/css/ss-custom.scss
+++ b/public/website/css/ss-custom.scss
@@ -1,3 +1,5 @@
+@import url(https://db.onlinewebfonts.com/c/0a4a5e68b7929fb9a01c2b5533f79641?family=Zooja+Light+Pro);
+
 @media(min-width:767px) {
     .df-center {
         display: flex;
@@ -225,15 +227,52 @@ Global Transfers Area CSS
 }
 
 .footer {
-    background-color: #096f37 !important;
+    background-color: #092e39 !important;
     ;
 
     .box-info {
-        border-bottom: 3px solid #81c55d;
+        border-bottom: 1px solid #81c55d;
+        border: 1px solid #81c55d;
+        border-radius: 70px;
+        display: flex;
+        align-items: center;
+        border-left: none;
+        justify-content: space-between;
+        padding-right: 30px;
+
+        .box-info-body {
+            padding: 6px 0 6px 8px;
+
+            h4 {
+                font-size: 14px;
+                font-weight: 400;
+            }
+
+            .holiay {
+                font-size: 10px;
+            }
+        }
+
+        .box-info-icon {
+            padding: 0px 0px;
+
+            img {
+                width: 30px;
+                height: 30px;
+            }
+        }
+
     }
 
-    .box-info .box-info-icon {
+    .box-info .icon-wrapper {
         color: #81c55d;
+        width: 60px;
+        height: 60px;
+        border: 1px solid #81c55d;
+        border-radius: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     .box-info:hover {
@@ -253,9 +292,13 @@ Global Transfers Area CSS
     }
 
     .fcopy {
-        background-color: #81c55d;
+        background-color: #0b8c47;
         color: #000;
         text-align: center;
+
+        p {
+            color: #78c157;
+        }
     }
 
     .footer-item .logo-bottom {
@@ -264,7 +307,7 @@ Global Transfers Area CSS
 
     .footer-item {
         h6 {
-            color: #c3efab;
+            color: #7cc55d;
             padding-bottom: 5px;
             font-size: 18px;
         }
@@ -273,6 +316,11 @@ Global Transfers Area CSS
     .footer-item .footer-sosmed {
         margin-top: 30px;
     }
+}
+
+.footer .footer-item .footer-title {
+    color: #7cc55d;
+    text-transform: capitalize;
 }
 
 .bg-grey {
@@ -400,7 +448,7 @@ Global Transfers Area CSS
     }
 }
 
-.agri-dhan-vikas .section-title,
+
 .product-section .container h2,
 .gallery .container h2 {
     color: #7fc55d !important;
@@ -625,7 +673,20 @@ Global Transfers Area CSS
 }
 
 .agri-dhan-vikas {
-    padding: 0px 0px 100px 0px;
+    padding: 60px 0px 100px 0px;
+    background-color: #f7f8f9 !important;
+
+    .section-title {
+        color: #222222 !important;
+        margin-bottom: 10px;
+        font-size: 46px;
+    }
+
+    .subtitle {
+        text-align: center;
+        color: #757678;
+        font-size: 16px;
+    }
 }
 
 .product-section {
@@ -662,7 +723,7 @@ Global Transfers Area CSS
     .pro_description {
         padding-top: 20px;
         padding-bottom: 30px;
-            margin-bottom: -80px;
+        margin-bottom: -80px;
 
         @media(min-width: 992px) {
             max-width: 70%;
@@ -747,7 +808,6 @@ Global Transfers Area CSS
 
 .footer .box-info .box-info-body {
     border-left-color: transparent !important;
-    min-height: 115px;
 }
 
 .blog {
@@ -784,21 +844,196 @@ Global Transfers Area CSS
     .footer .box-info .box-info-body {
         padding: 20px 0 20px 0px !important;
     }
+
     .footer .box-info .box-info-icon {
-    padding: 20px 20px !important;
+        padding: 20px 20px !important;
     }
 }
 
-.product-card{
-    .price{
+.product-card {
+    .price {
         display: none;
     }
 }
-.vidimg img{
-        height: 500px;
+
+.vidimg img {
+    height: 500px;
     object-fit: cover;
 }
 
-.service-details strong{
+.service-details strong {
     font-size: 17px;
+}
+
+
+
+.slides-pagination {
+    position: absolute;
+    bottom: 30px;
+    z-index: 9;
+    width: 100%;
+    text-align: center;
+}
+
+.slides-dots {
+    text-align: center;
+    margin-top: 10px;
+}
+
+.slides-dots .dot {
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+    background: #ccc;
+    border-radius: 50%;
+    margin: 0 5px;
+    cursor: pointer;
+}
+
+.slides-dots .dot.active {
+    background: #333;
+}
+
+.slides-pagination a {
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+    margin: 0 5px;
+    background-color: #ccc;
+    border-radius: 50%;
+    /* Makes it a circle */
+    text-indent: -9999px;
+    /* Hides the number */
+    overflow: hidden;
+}
+
+.slides-pagination a.current {
+    background-color: #009144;
+    /* Active dot color */
+}
+
+.pt-80 {
+    padding-top: 80px !important;
+}
+
+.know-more-btn {
+    color: #2c7f3c;
+    border: 1px solid #2c7f3c;
+    padding: 3px 14px;
+    border-radius: 5px;
+}
+
+.home-about {
+    padding-bottom: 80px;
+
+    h1 {
+        font-size: 46px;
+        font-weight: 500;
+        color: #222222;
+    }
+
+    .vidimg {
+        border-radius: 0;
+
+        img {
+            height: 340px;
+            width: 80%;
+        }
+    }
+}
+
+.dv-center {
+    display: flex;
+    align-items: center;
+}
+
+.home-expore {
+    padding-bottom: 80px;
+    position: relative;
+
+    .overlay {
+        position: absolute;
+        background-color: rgb(0 0 0 / 37%);
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+    }
+
+    .carousel-caption {
+        top: 50%;
+        margin-top: -55px;
+
+        h3 {
+            font-family: "Zooja Light Pro" !important;
+            font-size: 40px;
+            font-weight: 100;
+        }
+    }
+
+    .carousel-control {
+        width: 30px;
+        height: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: 1px solid #fff;
+        border-radius: 50%;
+        background-image: none;
+        top: 50%;
+        margin-top: -15px;
+    }
+
+    .right {
+        right: 30px;
+    }
+
+    .left {
+        left: 30px;
+    }
+
+    .section-title {
+        padding-bottom: 20px;
+        text-align: center;
+        color: #222222 !important;
+        font-weight: 500;
+        font-size: 46px;
+    }
+}
+
+.pt-40 {
+    padding-top: 40px;
+}
+
+.footer .footer-item .footer-sosmed a .item {
+    color: #fffefe;
+}
+.footer .footer-item .footer-subscribe input[type=email] {
+    background-color: #abd8b0;
+    padding-left: 50px;
+    border-radius: 20px;
+
+}
+.footer .footer-item .footer-subscribe label{
+    background-color: #abd8b0;
+    left: 0;
+        background-color: #abd8b0;
+        top: 1px;
+    left: 0;
+  width: 36px;
+    height: 36px;
+    border: 1px solid #fff;
+    border-radius: 50px;
+    img{
+        width: 20px;
+        height: 20px;
+    }
+}
+.footer .footer-item .footer-subscribe input[type=email]:focus  {
+    border-radius: 20px !important;
+}
+
+.membership-left-img{
+    position: absolute;
+        top: -149px;
 }
