--- a/public/website/css/custom.scss
+++ b/public/website/css/custom.scss
@@ -368,6 +368,14 @@ h3 {
         padding-bottom: 20px;
       }
     }
+    @media (max-width: 400px) {
+      grid-template-columns: 1fr;
+
+      .card-content {
+        margin-top: 50px;
+        padding-bottom: 20px;
+      }
+    }
 
     .card {
       display: flex;
